# victrix

./: Cargo.toml  Makefile.toml  README.md
resources/: config.ron  events.ron  history.ron
resources/scenes/: menu.ron
src/: game.rs  history.rs  input.rs  main.rs  ui.rs
