[package]
name = "victrix"
version = "0.1.0"
authors = ["ever <ever1337@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
conrod_core = "0.69.0"
conrod_glium = "0.69.0"
conrod_winit = "0.69.0"
winit = "0.19"
glium = "0.24.0"
ron = "0.5.1"
serde = "1.0.104"
image = "0.23.2"
log = "0.4.8"
env_logger = "0.7.1"
