[package]
name = "victrix"
version = "0.1.0"
authors = ["ever <ever1337@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
conrod_core = "0.69.0"
conrod_piston = "0.69.0"
piston2d-graphics = "0.30"
pistoncore-input = "0.24.0"
piston_window = "0.89"
ron = "0.5.1"
serde = "1.0.104"
image = "0.23.2"
log = "0.4.8"
env_logger = "0.7.1"
