[package]
name = "victrix"
version = "0.1.0"
authors = ["ever <ever1337@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raylib = "1.0.1"
ron = "0.5.1"
serde = "1.0.104"
image = "0.23.2"
log = "0.4.8"
env_logger = "0.7.1"
